--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 body {
   font-family: 'helvetica neue', arial, sans-serif;
   font-weight: 150;
-  background-image: url(linedpaper.png);
+  background-image: url(http://kabegami.tank.jp/dog1/dog104/b.gif);
   background-repeat: repeat;
+  background-color: #f9c2f7;
 }
 #wrapper {
   width: 960px;
   margin: 20px auto 20px auto;
 }
 h1 {
-  color: blue;
+  color: black;
+  font-size: 35px;
 }
-h1 {
-  color: green;
+h2 {
+  color: black;
+  font-size: 25px;
 }
 h4 {
   color: purple;
