--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(http://cdn.homesthetics.net/wp-content/uploads/2013/10/17-Inspiring-Wonderful-Black-and-White-Contemporary-Interior-Designs-Homesthetics-161.jpg);
+  background-image: url(http://wallpaperlayer.com/img/2015/9/interior-design-wallpaper-8889-9220-hd-wallpapers.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background text: center;
