--- a/style1.css
+++ b/style1.css
@@ -3,6 +3,9 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background text: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
 .navbar {
   background-color: #222;
