--- a/style1.css
+++ b/style1.css
@@ -1,11 +1,11 @@
 body {
   background-image: url(http://wallpaperlayer.com/img/2015/9/interior-design-wallpaper-8889-9220-hd-wallpapers.jpg);
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background text: center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
 }
 .navbar {
   background-color: #222;
