--- a/style5.css
+++ b/style5.css
@@ -1,11 +1,11 @@
 body {
   background-image: url(https://images6.alphacoders.com/423/423653.jpg);
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background text: center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
 }
 body {
   padding-top: 120px;
